--- a/lectures/lecture-13.qmd
+++ b/lectures/lecture-13.qmd
@@ -210,7 +210,7 @@ Find
 
 ### Example 6.8
 
-x is a normally distributed normal random variable with a mean of 10 and standard deviation of 2. Fine the probability that x lies between 11 and 13.6?
+x is a normally distributed normal random variable with a mean of 10 and standard deviation of 2. Find the probability that x lies between 11 and 13.6?
 
 $$
 \begin{aligned}
@@ -221,13 +221,23 @@ $$
 \end{aligned}
 $$
 
--   show how this is the same[ using interactive tool](https://shiny.stat.lsa.umich.edu/pvals/)
+-   show how this is the same [using interactive tool](https://shiny.stat.lsa.umich.edu/pvals/)
 
 ### Example 6.9
 
-Gase mileage for compact cars is normally distributed with mean of 35.5 mpg and std of 4.5.
+Gas mileage for compact cars is normally distributed with mean of 35.5 mpg and std of 4.5.
 
 What percentage of compacts get 40 mpg or more
+\
+\
+\
+\
+\
+\
+\
+\
+\
+
 
 Convert to z-score
 
@@ -236,7 +246,7 @@ Answer is 15.8%
 ### Homework
 
 ```{r}
-get_lecture_homework(17)
+get_lecture_homework(18)
 ```
 
 Answers: [Section 6.2](/homework/chapter-06.qmd#section-2)
