--- a/lectures/lecture-15.qmd
+++ b/lectures/lecture-15.qmd
@@ -12,30 +12,26 @@ library(ggplot2)
 sapply(list.files(here::here('R'), full.names = T), source)
 ```
 
-## Section 6.3 The normal Approximatinoo to the Binomial Probability Distribution
+## Section 6.3 The normal Approximation to the Binomial Probability Distribution
 
-- The binomial formaul produces lengthy calculations and the tables are available only for certains values of n and p. 
-- You can use the normal approximation to the binomial probability distribution
-
-
+-   The binomial formala produces lengthy calculations and the tables are available only for certain values of n and p.
+-   You can use the normal approximation to the binomial probability distribution
 
 ### The normal approximation
 
-- Let *x* be a binomial random variable with n trials and probability p of success. The probability distribution of x is apprimated using a normal curve with:
-- $\mu = np$ and $\sigma = \sqrt{npq}$.
+-   Let *x* be a binomial random variable with n trials and probability p of success. The probability distribution of x is approximated using a normal curve with:
 
-- This approximation is adequate as long as *n* is large and *p* is not too close to 0 or 1.
+-   $\mu = np$ and $\sigma = \sqrt{npq}$.
 
-
-
+-   This approximation is adequate as long as *n* is large and *p* is not too close to 0 or 1.
 
 ### Figure 6.17
 
-- n = 25, p = 0.5
-- $\mu = ?$
-- $\sigma = ?$
-- compare the areas under the curve to the areas in the bar
-- Example the curve between 7.5 and 10.5 is approximately $P(8 \lte x \lte 10)$
+-   n = 25, p = 0.5
+-   $\mu = ?$
+-   $\sigma = ?$
+-   compare the areas under the curve to the areas in the bar
+-   Example the curve between 7.5 and 10.5 is approximately $P(8 \le x \le 10)$
 
 ```{r}
 tibble::tibble(
@@ -50,36 +46,30 @@ scale_x_continuous(breaks = 0:25) +
 labs(x = "x", y = "p(x)", caption = "blue line is normal distribution")
 ```
 
-
-
-Use Binomial Probability?
+Use Binomial Probability? $$
+P(8 \le x \le 10) = .190
 $$
-P(8 \lte x \lte 10) = .190
-$$
-
 
 Use Normal approximation (subtract .5 from lower end and add .5 to upper end)
 
 $$
-P(7.5 \lte x \lte 10.5) = .1891
+P(7.5 \le x \le 10.5) = .1891
 $$
 
-- z-score
+-   z-score
 
-The 1/2 half adjustment is called a continuity correction and helps account for th efact that you are approximating a discrete random variable with a continuous one. 
-
+The 1/2 half adjustment is called a continuity correction and helps account for the effect that you are approximating a discrete random variable with a continuous one.
 
 Rule of thumb:
 
-- The normal approximation to the binomial probabilities will be adequate if both:
-- $np >5$ and $nq >5$
-
+-   The normal approximation to the binomial probabilities will be adequate if both:
+-   $np >5$ and $nq >5$
 
 ### Figure 6.18
 
-- n = 25, p = .1
-- $\mu = ?$
-- $\sigma = ?$
+-   n = 25, p = .1
+-   $\mu = ?$
+-   $\sigma = ?$
 
 ```{r}
 tibble::tibble(
@@ -99,12 +89,15 @@ labs(x = "x", y = "p(x)", caption = "blue line is normal distribution")
 
 The reliability of an electrical fuse it he probability that a fuse, chosen at random from pdouction will function under its designed conditions. A random sample of 1000 fuses was tested and x = 27 defectives were observed. Calculate the approximate probablity of observing 27 or more defectives, assuming that the fuse reliability is .98.
 
-- $\mu = np = 1000*.02 = 20$
-- $\sigma = \sqrt{npq} $
+-   $\mu = np = 1000*.02 = 20$
 
-- Check if normal approximation is appropriate?
-- Create z score for value of 26.5
-- Normal approximatino yields .0708
+-   $\sigma = \sqrt{npq} = 1000 * .02 * .98 = 19.6$
+
+-   Check if normal approximation is appropriate?
+
+-   Create z score for value of 26.5
+
+-   Normal approximation yields .0708
 
 Using exact:
 
@@ -112,29 +105,25 @@ Using exact:
 1 - pbinom(27, size = 1000, prob = .02, lower.tail = TRUE) |> round(4)
 ```
 
-
 ### Example 6.12
 
 A soda manufacturer was fairly certain that her brand had a 10% share of the market. In a survey involving 2500 soda drinkers, x = 211 preferred her brand. If the 10% figure is correct, find the probability of observing 211 or fewer consumers who perfer her brand of soda.
 
+-   $\mu = 250$
 
-- $\mu = 250$
-- $\sigma = 15$
+-   $\sigma = 15$
 
-
-- Z score for 211.5 = -2.57
+-   Z score for 211.5 = -2.57
 
 $$
 P(x \le 211) \approx P( z \lt -2.57) = .0051
 $$
-
 
 Exact binomial probability:
 
 ```{r}
 pbinom(211, size = 2500, prob = .1) |> round(4)
 ```
-
 
 What happened??
 
@@ -152,7 +141,7 @@ What happened??
 \
 \
 
-Either observed an unusual sample even though  p = 0.1 OR the sample reflects the valuye of p is less than .1 and perhaps closer to 21/2500 = .08
+Either observed an unusual sample even though p = 0.1 OR the sample reflects the value of p is less than .1 and perhaps closer to 21/2500 = .08
 
 ### Homework
 
